CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #648, STR #692, STR #730, STR
	  #744, STR #745)
	- Fl_File_Chooser no longer resets the type() when
	  choosing a single file, and it now works when selecting
	  multiple directories (STR #747)
	- Fl_File_Icon::load_system_icons() now only loads 16x16
	  and 32x32 icon images to improve startup performance.
	- Pressing Enter in the file chooser when selecting a
	  directory will choose that directory if it is currently
	  shown (STR #746)
	- Added a fl_file_chooser_ok_label() function to set the
	  "OK" button label for the fl_file_chooser() and
	  fl_dir_chooser() functions.
	- Added Fl_File_Chooser::ok_label() methods to set the
	  "OK" button label.
	- The fl_ask() function is now deprecated since it does
	  not conform to the FLTK Human Interface Guidelines.
	- The Fl_File_Chooser window now properly resizes its
	  controls (STR #766)
	- The Fl_Help_Dialog window now properly resizes its
	  controls (STR #768)
	- The Fl_File_Chooser favorites window is now resizable
	  (STR #770)
	- Now provide FL_PLASTIC_ROUND_UP/DOWN_BOX box types
	  which are used by the plastic scheme.
	- FLUID windows that are resized through the widget panel
	  now remain resizable by the window manager.
	- Increased the size of the background image used by
	  the plastic scheme to reduce the CPU load of redraws
	  (STR #769)
	- Fixed a syntax highlighting bug in the editor demo.
	- Fl_Progress now contrasts the label color with the bar
	  color, so labels will be readable at all times.
	- fl_read_image() didn't use the right red, green, and
	  blue masks on XFree86.
	- Fixed Quickdraw drawing of 3 and 4 sided polygons (STR
	  #765)
	- Fixed fl_message() code so that it does not get
	  accidentaly addded to the current group (STR #253)
	- FLUID now highlights code in the widget callback and
	  code editors.
	- FLUID now supports printing of windows.
	- Fixed inactive drawing of border, embossed, and
	  engraved box types.