@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- Fl_File_Chooser now correctly handles multiple
+	  selections that are a mix of files and directories.
 	- Fl_File_Chooser no longer resets the type() when
 	  choosing a single file, and it now works when selecting
 	  multiple directories (STR #747)
